Fixed custom gps address mask on mobile #93

--- a/projects/field-custom-gps/src/main/main.css
+++ b/projects/field-custom-gps/src/main/main.css
@@ -15,6 +15,10 @@
   background: white;
 }
 
+.address-mask-container {
+  flex-wrap: nowrap;
+}
+
 .map-info label,
 .map-info #icon-search {
   margin-right: 8px;
